# 4_sem

box/: Makefile  box.h  main.c  main.out
box/list/: list.c  list.h
box/vector/: vector.c  vector.h
controlnaya/1/: a.out  main.cpp
controlnaya/2/: CMakeLists.txt  a.out  buffer.h  main.cpp  my_cat
controlnaya/2/old/: old.cpp  old.h
controlnaya/3/: a.out  main.cpp
snake/: CMakeLists.txt  Makefile  ai.cpp  ai.h  control.cpp  control.h  game.cpp  game.h  human.cpp  human.h  keypressable.h  logFile.txt  main.cpp  snake  tui.cpp  tui.h  ui.cpp  ui.h  view.cpp  view.h
snake_clion/: CMakeLists.txt  ai.h  game.cpp  human.cpp  human.h  logFile.txt  tui.cpp  tui.h  view.cpp  view.h
